--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
-    "bootstrap": "^5.0.1",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.2.1",
+    "ngx-bootstrap": "^6.2.0",
+    "popper.js": "^1.12.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
